show place in different components

--- a/src/components/Finale/index.module.css
+++ b/src/components/Finale/index.module.css
@@ -33,3 +33,14 @@
   font-size: 14px;
   width: 50%;
 }
+
+.smallrow {
+  height: 10px;
+  font-size: 10px;
+  line-height: 1;
+}
+
+.smallrow img {
+  height: 10px !important;
+  margin-left: 4px;
+}
