--- a/src/components/Achtelfinale/index.module.css
+++ b/src/components/Achtelfinale/index.module.css
@@ -44,3 +44,20 @@
   width: 25%;
   font-size: 14px;
 }
+
+.flexhalf {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  width: 100%;
+}
+
+.smallrow {
+  height: 10px;
+  font-size: 10px;
+  line-height: 1;
+}
+
+.smallrow img {
+  height: 10px !important;
+  margin-left: 4px;
+}
